counts on the homepage

--- a/templates/itfsite/homepage-279projectxyz.html
+++ b/templates/itfsite/homepage-279projectxyz.html
@@ -43,6 +43,23 @@
 			padding-top: .5em;
 		}
 
+.twoseventyninecounts {
+	clear: both;
+	background-color: #EEE;
+	padding: 6px 10px;
+	text-align: center;
+	font-size: 95%;
+}
+.twoseventyninecounts p {
+	margin: 0 0 3px 0;
+}
+.twoseventyninecounts .num {
+}
+.twoseventyninecounts .descr {
+	line-height: 125%;
+	font-size: 90%;
+}
+
 {% include "itfsite/campaign-bubble-styles.css" %}
 
 .campaign-bubble {
