apply the actual domain name

--- a/static/css/279forchangeus.css
+++ b/static/css/279forchangeus.css
@@ -38,7 +38,7 @@ a, a:hover, a:link, a:visited, a:active {
 	color: #F9F5E6;
 }
 .navbar a.navbar-brand {
-	background-image: url('/static/branding/279project/logo.png');
+	background-image: url('/static/branding/279forchange.us/logo.png');
 	background-size: 32px 32px;
 	background-position-y: 9px;
 	background-repeat: no-repeat;
@@ -52,7 +52,7 @@ a, a:hover, a:link, a:visited, a:active {
 	background-color: rgba(50,50,50, .85);
 	min-height: 44px;
 	color: white;
-	background-image: url('/static/branding/279project/logo.png');
+	background-image: url('/static/branding/279forchange.us/logo.png');
 	background-size: 32px 32px;
 	background-position: 15px 6px;
 	background-repeat: no-repeat;
